--- a/API/0221_final/application.properties
+++ b/API/0221_final/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=
 spring.datasource.username=user
-spring.datasource.password=0817
+spring.datasource.password=//passwrd
 
 # Spring JPA
 spring.jpa.database=mysql
