[3/10] 1. 로그인 api 1차 완료 2. UI 업데이트 3. UI id 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31" >
         <activity
+            android:name=".myprofile.myVideo.ChallengeVideoRepository"
+            android:exported="false" />
+        <activity
+            android:name=".myprofile.myVideo.PracticeVideoRepository"
+            android:exported="false" />
+        <activity
             android:name=".myprofile.editProfile.DeleteAccount"
             android:exported="false" />
         <activity
