--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Danzle"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
             android:name=".myprofile.myVideo.ChallengeVideoRepository"
             android:exported="false" />
@@ -28,7 +28,7 @@
             android:name=".myprofile.editProfile.ChangePassword"
             android:exported="false" />
         <activity
-            android:name=".myprofile.editProfile.Username"
+            android:name=".myprofile.editProfile.ChangeUsername"
             android:exported="false" />
         <activity
             android:name=".HighlightFinish"
@@ -49,10 +49,7 @@
             android:name=".myprofile.editProfile.EditProfile"
             android:exported="false" />
         <activity
-            android:name=".myprofile.MyProfileMain"
-            android:exported="false" />
-        <activity
-            android:name=".startPage.ForgotPassword2"
+            android:name=".MyProfileFragment2"
             android:exported="false" />
         <activity
             android:name=".startPage.ForgotPassword1"
@@ -94,11 +91,11 @@
             android:name=".startPage.FirstStart"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".startPage.SignIn"
             android:exported="false" />
         <activity
-            android:name=".startPage.SignIn"
-            android:exported="true" >
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
