[3/22] 1. navigationbar -> fragment 코드 원래 코드와 합침 2. MainPracticeFragment의 viewPager 백그라운드 색상 설정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:name=".myprofile.editProfile.EditProfile"
             android:exported="false" />
         <activity
-            android:name=".MyProfileFragment2"
+            android:name=".MyProfileFragment"
             android:exported="false" />
         <activity
             android:name=".startPage.ForgotPassword1"
