--- a/v2/java/application.properties
+++ b/v2/java/application.properties
@@ -5,7 +5,7 @@ spring.thymeleaf.cache=false
 
 # Spring DataSource (MySQL)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/0124_db?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/____________?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Seoul
 spring.datasource.username=____
 spring.datasource.password=____
 spring.datasource.hikari.connection-timeout=30000  
