1. 실루엣 영상 불러오기 성공 => 실루엣 영상 불러올 때 영상 자체는 잘 넘어오는데 카메라 화면 때문에 실루엣 영상이 안 보이는 현상 발생 => xml에 있는 실루엣 영상 부분에 app:surface_type="texture_view" 이 부분 추가해주니까 문제 해결됨
- 실루엣 영상 서버 주소 부분이 지금 잘못되서 하드코딩한 상태

2. 음악 선택 recyclerview 부분 click 기능 구현 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.camera.any" />
 
-    <!-- wake lock -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- wake lock -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
 
     <application
         android:name=".DanzleApplication"
@@ -18,7 +23,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Danzle"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".correction.Correction"
+            android:exported="false" />
+        <activity
+            android:name=".correction.CorrectionFinish"
+            android:exported="false" />
+        <activity
+            android:name=".VideoPlayerActivity"
+            android:exported="false" />
         <activity
             android:name=".myprofile.myVideo.ChallengeVideoRepository"
             android:exported="false" />
@@ -35,7 +49,7 @@
             android:name=".myprofile.editProfile.ChangeUsername"
             android:exported="false" />
         <activity
-            android:name=".HighlightFinish"
+            android:name=".practice.HighlightFinish"
             android:exported="false" />
         <activity
             android:name=".practice.FullFinish"
@@ -58,7 +72,6 @@
         <activity
             android:name=".challenge.ChallengeMusicSelect"
             android:exported="false" />
-
         <activity
             android:name=".correction.CorrectionMusicSelect"
             android:exported="false" />
@@ -66,10 +79,10 @@
             android:name=".practice.HighlightPractice"
             android:exported="false" />
         <activity
-            android:name=".practice.PracticeMusicSelect"
+            android:name=".startPage.FirstStart"
             android:exported="false" />
         <activity
-            android:name=".practice.MusicSelectPopup"
+            android:name=".practice.PracticeMusicSelectPopup"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
@@ -81,14 +94,14 @@
             android:name=".startPage.CreateAccount"
             android:exported="false" />
         <activity
-            android:name=".startPage.FirstStart"
+            android:name=".startPage.SignIn"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".startPage.SignIn"
-            android:exported="true">
+            android:name=".practice.PracticeMusicSelect"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
