1. 연습하기 모드 서버 연결 but, 배경 검정 레이아웃 문제
2. 정확도 모드 1차 완료 -> 서버 500 error

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:name=".myprofile.editProfile.ChangeUsername"
             android:exported="false" />
         <activity
-            android:name=".practice.HighlightFinish"
+            android:name=".practice.HighlightPracticeFinish"
             android:exported="false" />
         <activity
             android:name=".practice.FullFinish"
@@ -94,13 +94,13 @@
             android:name=".startPage.CreateAccount"
             android:exported="false" />
         <activity
-            android:name=".startPage.SignIn"
+            android:name=".practice.PracticeMusicSelect"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".practice.PracticeMusicSelect"
+            android:name=".startPage.SignIn"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
