UI 전체 디테일 수정

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,4 +27,4 @@ engage-core = { group = "com.google.android.engage", name = "engage-core", versi
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
