--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.7.3"
+agp = "8.9.2"
 kotlin = "2.1.20"
 coreKtx = "1.16.0"
 junit = "4.13.2"
@@ -30,15 +30,15 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraView" }
 androidx-camera-extensions = { group = "androidx.camera", name = "camera-extensions", version.ref = "cameraView" }
 androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "cameraView" }
-androidx-camera-camera = { group = "androidx.camera", name = "camera-camera", version.ref = "cameraView" }
+androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version.ref = "cameraView" }
 androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "cameraView" }
 androidx-camera-video = { group = "androidx.camera", name = "camera-video", version.ref = "cameraView" }
 
 engage-core = { group = "com.google.android.engage", name = "engage-core", version.ref = "engageCore" }
 androidx-gridlayout = {group = "androidx.gridlayout", name = "gridlayout", version.ref = "gridLayout"}
 
-androidx-media3-exoplayer = {group = "androidx.media3", name = "media3-explayer", version.ref = "media3"}
-androidx-media3-dash = {group ="androidx.media3", name = "media3-expoplayer-dash", version.ref = "media3"}
+androidx-media3-exoplayer = {group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3"}
+androidx-media3-dash = {group ="androidx.media3", name = "media3-exoplayer-dash", version.ref = "media3"}
 androidx-media3-ui = {group = "androidx.media3", name = "media3-ui", version.ref = "media3"}
 
 glide = {group = "com.github.bumptech.glide", name = "glide", version.ref = "glide"}
